overflow hidden vertically as well in order not to prevent scroll behavior

--- a/assets/css/articles-container.css
+++ b/assets/css/articles-container.css
@@ -1,6 +1,6 @@
 #top-articles-container {
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .top-articles-row {
